--- a/cpp/Sleeper/Sleeper.vcxproj
+++ b/cpp/Sleeper/Sleeper.vcxproj
@@ -116,6 +116,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Sleeper.h" />
+    <ClInclude Include="Thread.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
