--- a/cpp/Sleeper/Sleeper.vcxproj.filters
+++ b/cpp/Sleeper/Sleeper.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="Sleeper.h">
       <Filter>標頭檔</Filter>
     </ClInclude>
+    <ClInclude Include="Thread.h">
+      <Filter>標頭檔</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
